--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sonar",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Detects an element size changes",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,11 @@
   ],
   "dependencies": {
     "element-resize-event": "^2.0.0"
+  },
+  "homepage": "https://github.com/easyrider/react-sonar.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/easyrider/react-sonar.git"
   },
   "author": "Adam Dymowski",
   "license": "ISC"
